[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Board.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/quitx2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/clockx2.png" type="Texture" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Board" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 48.0
margin_top = 48.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 32

[node name="QuitButton" type="Button" parent="CanvasLayer/HBoxContainer"]
pause_mode = 2
margin_right = 68.0
margin_bottom = 68.0
theme = ExtResource( 3 )
icon = ExtResource( 4 )

[node name="PauseButton" type="Button" parent="CanvasLayer/HBoxContainer"]
pause_mode = 2
unique_name_in_owner = true
margin_left = 100.0
margin_right = 164.0
margin_bottom = 68.0
rect_min_size = Vector2( 64, 64 )
theme = ExtResource( 3 )
text = "||"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CanvasLayer"]
pause_mode = 2
unique_name_in_owner = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -80.0
margin_right = 212.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 87.5 )
theme = ExtResource( 3 )
window_title = ""
dialog_text = "Are you sure"
dialog_autowrap = true

[node name="PlayerTurnLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.5
margin_top = 64.0
margin_right = 225.5
margin_bottom = 62.0
theme = ExtResource( 3 )
text = "Player 1's Turn"
align = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -264.0
margin_top = 160.0
margin_right = -69.0
margin_bottom = 222.0
theme = ExtResource( 3 )
text = "Score:"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 1096.0
margin_top = 251.0
margin_right = 1144.0
margin_bottom = 387.0

[node name="Player1Score" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 48.0
margin_bottom = 62.0
theme = ExtResource( 3 )
text = "--"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/VBoxContainer"]
margin_top = 66.0
margin_right = 48.0
margin_bottom = 70.0

[node name="Player2Score" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 74.0
margin_right = 48.0
margin_bottom = 136.0
theme = ExtResource( 3 )
text = "--"

[node name="TimerIcon" type="TextureRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -272.0
margin_top = 64.0
margin_right = -208.0
margin_bottom = 128.0
texture = ExtResource( 5 )

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 64.0
margin_right = -37.0
margin_bottom = 126.0
theme = ExtResource( 3 )
text = "--:--"

[node name="GameOverDialog" type="AcceptDialog" parent="CanvasLayer"]
unique_name_in_owner = true
visible = true
margin_left = 428.0
margin_top = 344.0
margin_right = 852.0
margin_bottom = 505.0
theme = ExtResource( 3 )
popup_exclusive = true
window_title = ""
dialog_text = "You have win"

[connection signal="pressed" from="CanvasLayer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="confirmed" from="CanvasLayer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="confirmed" from="CanvasLayer/GameOverDialog" to="." method="_on_GameOverDialog_confirmed"]
